--- a/configs/articulator/articulator-tiger-rd.yaml
+++ b/configs/articulator/articulator-tiger-rd.yaml
@@ -2,7 +2,7 @@ _target_: dos.trainer.Trainer # Class Name
 
 train_dataset:
   _target_: dos.datasets.ImageDataset          # Class Name
-  root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png 
+  root_dir: ./assets/dummy_data/target         # dummy not used
   attributes:
     - name: image
       suffix: _rgb.png
@@ -32,10 +32,11 @@ model:
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walking_blender/tiger.gltf   # Walking gen Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_hunting_blender/tiger.gltf   # Hunting gen Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_sitting_blender/tiger.gltf   # Crawling gen Pose
-    gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_rest_pose/tiger.gltf           # Rest gen Pose
+    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_rest_pose/tiger.gltf           # Rest gen Pose
+    gltf_file_path: ./assets/meshes/tiger_rest_pose/tiger.gltf
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.gltf         # Walk Pose better
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3188_tiger_sitting_white_background
   superAnimal_kp_ON: True   # IMPORTANT: switich on/off superAni_trainer_ON and change mode_kps_selection
 
   super_Ani_head_kps_ON:             False
@@ -63,7 +64,8 @@ model:
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walking_blender/tiger.obj   # Walking  Pose
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_hunting_blender/tiger.obj   # Hunting  Pose
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_sitting_blender/tiger.obj   # Crawl  Pose
-  shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_rest_pose/tiger.obj           # Rest st Pose
+  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_rest_pose/tiger.obj           # Rest st Pose
+  shape_template_path: ./assets/meshes/tiger_rest_pose/tiger.obj
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.obj         # Walk Pose better
   enable_texture_predictor: False
 
@@ -98,10 +100,11 @@ model:
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_crawl
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_jumping_8_views       # CHANGE multi_view_optimise_option AND num_pose_for_optim
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_8_views_target_img
+  target_image_folder: ./assets/targets/tiger_sit_8_views_target_img
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_12_views_target_img     # Tiger Walk 12 views
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_12_views_target_img_2    # Tiger Sit  12 views
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_8_views                   # Tiger Walk 8 views
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_crouching
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_crouching
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -134,9 +137,9 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3188_tiger_sitting_white_background/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
-    vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
+    vis_name: sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
     prompts_source: '' #.The photo should have a grey background.' # DOS-1339  opti multi_view_azimu, GS20, Num_Infe50
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
@@ -163,7 +166,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3188_tiger_sitting_white_background
 
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
