--- a/configs/articulator/articulator-penguin-rd.yaml
+++ b/configs/articulator/articulator-penguin-rd.yaml
@@ -2,7 +2,7 @@ _target_: dos.trainer.Trainer # Class Name
 
 train_dataset:
   _target_: dos.datasets.ImageDataset          # Class Name
-  root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png 
+  root_dir: ./assets/dummy_data/target
   attributes:
     - name: image
       suffix: _rgb.png
@@ -35,7 +35,7 @@ model:
     gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/penguin/penguin.gltf          # Rest gen Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.gltf         # Walk Pose better
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3099_penguin_wings_down_corres
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3190_penguin_wings_down_corres_white_backg
   superAnimal_kp_ON: True   # IMPORTANT: switich on/off superAni_trainer_ON and change mode_kps_selection
 
   super_Ani_head_kps_ON:             False
@@ -90,8 +90,8 @@ model:
   # 12_side_views_only_in_batch_tiger_sit
   multi_view_optimise_option: "8_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
   
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/humming_8_views    # flying CHANGE multi_view_optimise_option AND num_pose_for_optim
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/penguin_flipper_down_2    # CHANGE multi_view_optimise_option AND num_pose_for_optim
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/penguin_flipper_down_2    # CHANGE multi_view_optimise_option AND num_pose_for_optim
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/penguin_flipper_down_white_backg
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -124,14 +124,12 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3099_penguin_wings_down_corres/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3190_penguin_wings_down_corres_white_backg/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
-    vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
-    # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
+    vis_name: sds_latent-l2_image-600-lr1e-1.jpg
     prompts_source: '' #.The photo should have a grey background.' # DOS-1339  opti multi_view_azimu, GS20, Num_Infe50
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
     # prompts: 'A photograph of a fully white cow running very fast, back view. All four legs should be visible. No cow tail'
-    # prompts: 'A photograph of a tiger streching front two legs forward.'
     view_dependent_prompting: True
     mode: sds_latent # Options are sds_image OR sds_latent-l2_image # sds_latent
     lr: 0.1  # For DeepFloyd+SDS
@@ -150,7 +148,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3099_penguin_wings_down_corres
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3190_penguin_wings_down_corres_white_backg
 
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
