--- a/configs/articulator/articulator-elephant-rd.yaml
+++ b/configs/articulator/articulator-elephant-rd.yaml
@@ -2,7 +2,7 @@ _target_: dos.trainer.Trainer # Class Name
 
 train_dataset:
   _target_: dos.datasets.ImageDataset          # Class Name
-  root_dir: /work/oishideb/cow_sd_generated_5  # /0_poses_target_img_NO_KPs.png 
+  root_dir: ./assets/dummy_data/target 
   attributes:
     - name: image
       suffix: _rgb.png
@@ -31,7 +31,7 @@ model:
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/elephant_standing/elephant.gltf    # Standing Rest Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/elephant_trunk_down/elephant.gltf    # Trunk down Pose    # Got more than 1 skin
   
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views  
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3185_elephant_trunk_down_corres_sd_sds
   superAnimal_kp_ON: False
 
   super_Ani_head_kps_ON:            False
@@ -47,7 +47,7 @@ model:
   back_left_leg_kps_ON:             False
   back_right_leg_kps_ON:            False
 
-  num_pose_for_optim: 4
+  num_pose_for_optim: 8
   num_pose_for_visual: 8
   num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 4  # 
@@ -78,12 +78,13 @@ model:
   # "4_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 4
   # "8_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 8
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
-  multi_view_optimise_option: "4_side_views_only_in_batch"
+  multi_view_optimise_option: "8_side_views_only_in_batch"
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_target_images_sit
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_up
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_1
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_2
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_2_views4
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_2_views4
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_3
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -92,7 +93,7 @@ model:
   cyc_consi_check_dist_threshold: 10 # 15
   cyc_check_img_save: False # This saves all the images with Cycle Consistency Check
   # seed: 60
-  target_image_fixed: True
+  target_image_fixed: False
   save_individual_img: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   
   correspond:
@@ -116,20 +117,20 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3185_elephant_trunk_down_corres_sd_sds/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
     prompts_source: '' #.The photo should have a grey background.' # DOS-1339  opti multi_view_azimu, GS20, Num_Infe50
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
     # prompts: 'A photograph of a fully white cow running very fast, back view. All four legs should be visible. No cow tail'
-    prompts: 'A photograph of a Sheep walking very very fast'
+    prompts: 'A photograph of a elephant standing still with trunk hanging down, rest pose, back view, back view.'
     view_dependent_prompting: True
     mode: sds_latent # Options are sds_image OR sds_latent-l2_image # sds_latent
     lr: 0.1  # For DeepFloyd+SDS
     lr_l2: 0.1  # For SD+SDS  1e4
     # seed: 8 # 6
-    num_inference_steps: 1
+    num_inference_steps: 50
     guidance_scale: 40
     dds: False
     select_diffusion_option: 'sd' # Options are sd, sd_XL, df, sd_dds_loss  # by default is sds loss
@@ -142,7 +143,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3185_elephant_trunk_down_corres_sd_sds
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -154,9 +155,9 @@ device: cuda:0
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.0009          
+learning_rate: 0.00009          
 # for debugging
-num_iterations: 1000
+num_iterations: 200
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
