--- a/configs/articulator/articulator-eagle-rd.yaml
+++ b/configs/articulator/articulator-eagle-rd.yaml
@@ -26,14 +26,7 @@ model:
 
   gltf_skin:
     _target_: dos.components.skinning.gltf_skinning.Skin
-    # gltf_file_path: /users/oishideb/oishideb/SheepFemaleRD/SheepFemaleRD.gltf                   # Rest Pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger/tiger.gltf                   # Non rest pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_updated_pose/tiger.gltf      # Running gen Pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walking_blender/tiger.gltf   # Walking gen Pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_hunting_blender/tiger.gltf   # Hunting gen Pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_sitting_blender/tiger.gltf   # Crawling gen Pose
     gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/eagle_wings_flat/eagle.gltf          # Rest gen Pose
-    # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.gltf         # Walk Pose better
 
   path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3022_wings_up
   superAnimal_kp_ON: False   # IMPORTANT: switich on/off superAni_trainer_ON and change mode_kps_selection
@@ -57,14 +50,7 @@ model:
   num_sample_bone_line: 4  # 
   num_sample_farthest_points: 30
   mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
-  # shape_template_path: /work/oishideb/from_nfs2/uploads-files-2571750-Sheep_Family_v01/Sheep_HighPoly.obj   # 20 bones
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger/tiger.obj                   # Non rest Pose
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_updated_pose/tiger.obj      # Running  Pose
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walking_blender/tiger.obj   # Walking  Pose
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_hunting_blender/tiger.obj   # Hunting  Pose
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_sitting_blender/tiger.obj   # Crawl  Pose
   shape_template_path: /users/oishideb/oishideb/mesh_assets_all/eagle_wings_flat/eagle.obj          # Rest st Pose
-  # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.obj         # Walk Pose better
   enable_texture_predictor: False
 
   view_option: "multi_view_azimu" # Options are "multi_view_azimu"; "multi_view_rand"; "single_view"
@@ -90,15 +76,7 @@ model:
   # 12_side_views_only_in_batch_tiger_sit
   multi_view_optimise_option: "8_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
   
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_target_images_sit         # Sitting
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_walk              # Blender gen walk
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_target_strech_front_legs    # Strech front legs 4 views
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_4_views_target_img     # walk 4 views
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_strech_all_4_legs
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_crawl
   target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/eagle_wings_up     # CHANGE multi_view_optimise_option AND num_pose_for_optim
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_12_views_target_img     # Tiger Walk 12 views
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_12_views_target_img_2    # Tiger Sit  12 views
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -134,11 +112,9 @@ model:
     output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3022_wings_up/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
-    # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
     prompts_source: '' #.The photo should have a grey background.' # DOS-1339  opti multi_view_azimu, GS20, Num_Infe50
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
-    # prompts: 'A photograph of a fully white cow running very fast, back view. All four legs should be visible. No cow tail'
-    prompts: 'A photograph of a tiger streching front two legs forward.'
+    prompts: 'A photograph of an eagle flying high.'
     view_dependent_prompting: True
     mode: sds_latent # Options are sds_image OR sds_latent-l2_image # sds_latent
     lr: 0.1  # For DeepFloyd+SDS
